--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <h1>내 생애 첫 홈페이지</h1>
 <a href="about/">about</a>
-<a href="about/">about</a>
-<a href="about/">about</a>
+<a href="product/">product</a>
+<a href="contact/">contact</a>
 </body>
 </html>
